<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14dp"
        android:onClick="connect"
        android:text="@string/connect" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/adfdw"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText1"
        android:ems="10"
        android:hint="@string/svva"
        android:inputType="text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@+id/password"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:onClick="login"
        android:text="@string/loginButton" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/username"
        android:ems="10"
        android:hint="@string/wvwdv"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/inviteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/password"
        android:onClick="invite"
        android:text="@string/invite" />

    <EditText
        android:id="@+id/inviteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inviteButton"
        android:layout_toLeftOf="@+id/inviteButton"
        android:ems="10"
        android:hint="@string/sds" />

    <EditText
        android:id="@+id/sendmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inviteButton"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/messageHint" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sendmessage"
        android:layout_alignRight="@+id/inviteButton"
        android:layout_toRightOf="@+id/inviteUser"
        android:onClick="sendMessage"
        android:text="@string/sendmessage" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="terminate"
        android:text="@string/end" />

</RelativeLayout>
